--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@
 @import "main.css";
 @import "page.css";
 
+:root {
+  --btn-color: rgb(254, 111, 15);
+  --btn-hover: rgba(254, 111, 15, 0.8);
+}
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
